...
    },
    "完成": {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        }
      }
    },
    "已套用到面板": {
      "localizations": {
...
